# Voice-controlled-Home-Automation

./: README.md
my-project/: CMakeLists.txt  blink.c  main.py  milestone2.c
my-project/rec/: pyvenv.cfg
